crates/monochange/tests/snapshots/release_record__release_record_command_reports_missing_record_in_history@release_record_command_reports_missing_record_in_history.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
error[release.record_failed]: no monochange release record found in first-parent ancestry from `HEAD`
  command: monochange step release-record
  help:    Point `--from` at a release commit, or run `monochange step release-record --from <ref>` to see which record a ref resolves to.
