crates/monochange/tests/snapshots/release_record__release_record_command_reports_record_from_tag_as_json@release_record_command_reports_record_from_tag_as_json.snap
---
source: crates/monochange/tests/release_record.rs
expression: redacted
---
{
  "distance": 0,
  "inputRef": "v1.2.3",
  "record": {
    "changedFiles": [
      "Cargo.lock"
    ],
    "changelogs": [],
    "changesets": [],
    "command": "release-pr",
    "createdAt": "[DATETIME]Z",
    "deletedChangesets": [
      ".changeset/feature.md"
    ],
    "kind": "monochange.releaseRecord",
    "packagePublications": [],
    "provider": {
      "host": null,
      "kind": "github",
      "owner": "ifiokjr",
      "repo": "monochange"
    },
    "releaseTargets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "monochange",
          "monochange_core"
        ],
        "release": true,
        "tag": true,
        "tagName": "v1.2.3",
        "version": "1.2.3",
        "versionFormat": "primary"
      }
    ],
    "releasedPackages": [
      "monochange",
      "monochange_core"
    ],
    "schemaVersion": "[SCHEMA_VERSION]",
    "updatedChangelogs": [
      "crates/monochange/CHANGELOG.md"
    ],
    "version": "1.2.3",
    "versions": {
      "sdk": "1.2.3"
    }
  },
  "recordCommit": "[SHA]",
  "resolvedCommit": "[SHA]"
}
