crates/monochange/tests/snapshots/release_record__release_record_command_reports_unresolved_refs@release_record_command_reports_unresolved_refs.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
error[git.failed]: could not resolve ref `missing-tag` to a commit: fatal: Needed a single revision
  command: monochange step release-record
  help:    Check that the ref or path exists in this clone. CI checkouts are often shallow: fetch full history and tags (for example `fetch-depth: 0` with `actions/checkout`), then rerun.
