crates/monochange/tests/snapshots/release_record__release_record_command_reports_unsupported_schema_version@release_record_command_reports_unsupported_schema_version.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
error[release.record_failed]: release record in commit [SHA] uses unsupported schema_version [SCHEMA_VERSION] (upgrade monochange to read this record)
  command: monochange step release-record
