crates/monochange/tests/snapshots/release_record__release_record_command_walks_first_parent_ancestry_from_head@release_record_command_walks_first_parent_ancestry_from_head.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stdout).unwrap_or_else(|error|\npanic!(\"stdout utf8: {error}\"))"
---
✔ Found release record · 1.2.3 · 1 release target

Ref            HEAD → [SHA]
Record commit  [SHA] · 2 commits back
Provider       github ifiokjr/monochange

Release targets (1)
  sdk  group  1.2.3  tag v1.2.3

Versions (1)
  sdk  1.2.3

Released packages (2)
  monochange
  monochange_core
