crates/monochange/tests/snapshots/release_record__tag_release_command_creates_and_pushes_declared_tags@tag_release_command_creates_and_pushes_declared_tags.snap
---
source: crates/monochange/tests/release_record.rs
expression: redacted
---
{
  "distance": 0,
  "dry_run": false,
  "from": "HEAD",
  "push": true,
  "record_commit": "[SHA]",
  "resolved_from_commit": "[SHA]",
  "status": "completed",
  "tag_results": [
    {
      "existing_commit": null,
      "operation": "created",
      "tag_name": "v1.2.3",
      "target_commit": "[SHA]"
    }
  ],
  "tags": {
    "sdk": "v1.2.3"
  }
}
