crates/monochange/tests/snapshots/release_record__tag_release_command_is_idempotent_when_tags_already_exist@tag_release_command_is_idempotent_when_tags_already_exist.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(second.stdout).unwrap_or_else(|error|\npanic!(\"stdout utf8: {error}\"))"
---
✔ Release tags are already up to date · push enabled

Ref            HEAD → [SHA]
Record commit  [SHA] · at the requested ref

Tags (1)
  v1.2.3  up to date  → [SHA]  unchanged
