crates/monochange/tests/snapshots/release_record__tag_release_command_json_snapshots_entire_report@tag_release_command_json_snapshots_entire_report.snap
---
source: crates/monochange/tests/release_record.rs
expression: redacted
---
{
  "distance": 0,
  "dry_run": true,
  "from": "HEAD",
  "push": false,
  "record_commit": "[SHA]",
  "resolved_from_commit": "[SHA]",
  "status": "dry_run",
  "tag_results": [
    {
      "existing_commit": null,
      "operation": "planned",
      "tag_name": "cli/v2.0.0",
      "target_commit": "[SHA]"
    },
    {
      "existing_commit": null,
      "operation": "planned",
      "tag_name": "v1.2.3",
      "target_commit": "[SHA]"
    }
  ],
  "tags": {
    "cli": "cli/v2.0.0",
    "sdk": "v1.2.3"
  }
}
