crates/monochange/tests/snapshots/release_record__tag_release_command_rejects_descendant_refs_that_are_not_release_commits@tag_release_command_rejects_descendant_refs_that_are_not_release_commits.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stderr).unwrap_or_else(|error|\npanic!(\"stderr utf8: {error}\"))"
---
error[config.invalid]: resolved ref `HEAD` points to commit [SHA], but the nearest monochange release record is in ancestor commit [SHA] at distance 1; `tag-release` only tags a commit that is itself the release commit
  command: monochange step tag-release
  help:    Check `monochange.toml` and the command arguments, then rerun the command.
