crates/monochange/tests/snapshots/release_record__tag_release_command_reports_when_no_tags_are_declared@tag_release_command_reports_when_no_tags_are_declared.snap
---
source: crates/monochange/tests/release_record.rs
expression: "String::from_utf8(output.stdout).unwrap_or_else(|error|\npanic!(\"stdout utf8: {error}\"))"
---
• The release record declares no tags · push disabled

Ref            HEAD → [SHA]
Record commit  [SHA] · at the requested ref
